css/stylesheet.css
.row {
    display: flex;
    flex-wrap: wrap;
    padding: 0 4px;
    justify-content: center;
    margin-left: 40px;
    margin-right: 40px;
  }
  
  #image{
  
    margin: 20px;
    width: 80%;
    height: auto;
    max-width: 80% ;
    position: relative;
    margin: auto;
    display: block;
  }
  
  /* Responsive layout - makes a two column-layout instead of four columns */
  @media screen and (max-width: 800px) {
    .column {
      flex: 50%;
      max-width: 50%;
    }
  }
  

  

